event responsibe correction

--- a/blog.html
+++ b/blog.html
@@ -58,14 +58,14 @@
                 
                 
             </div>
-            <div class="posts-pagination mb-30 mt-20">
+            <!-- <div class="posts-pagination mb-30 mt-20">
                 <ul>
                     <li><a href="#"><span class="flaticon-arrow-1"></span></a></li>
                     <li><a href="#">01</a></li>
                     <li><a href="#">02</a></li>
                     <li><a href="#"><span class="flaticon-arrow-1"></span></a></li>
                 </ul>
-            </div>
+            </div> -->
         </div>
     </section>
 
