--- a/causes.html
+++ b/causes.html
@@ -65,7 +65,7 @@
                 <h1>Recent Donators</h1>
                 <div class="text">We connects nonprofits, donors, and companies in nearly every country around the world.</div>
             </div>
-            <div class="row">
+            <div class="row" id="donar-list">
                 <div class="col-md-4 donor-block">
                     <div class="inner-box wow fadeInUp" data-wow-delay="200ms">
                         <div class="top-content">
@@ -81,78 +81,6 @@
                         <div class="bottom-content">
                             <div class="text">Donation</div>
                             <div class="price">$250</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 donor-block">
-                    <div class="inner-box wow fadeInUp" data-wow-delay="500ms">
-                        <div class="top-content">
-                            <div class="image">
-                                <img src="images/resource/donor-2.jpg" alt="">
-                                <div class="overlay">
-                                    <div class="icon"><a href="#"><span class="fa fa-twitter"></span></a></div>
-                                </div>
-                            </div>
-                            <h4>Alvina Betty</h4>
-                            <div class="location">Liverpool</div>
-                        </div>
-                        <div class="bottom-content">
-                            <div class="text">Donation</div>
-                            <div class="price">$200</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 donor-block">
-                    <div class="inner-box wow fadeInUp" data-wow-delay="200ms">
-                        <div class="top-content">
-                            <div class="image">
-                                <img src="images/resource/donor-3.jpg" alt="">
-                                <div class="overlay">
-                                    <div class="icon"><a href="#"><span class="fa fa-twitter"></span></a></div>
-                                </div>
-                            </div>
-                            <h4>Jasper Flelix</h4>
-                            <div class="location">Newcastle</div>
-                        </div>
-                        <div class="bottom-content">
-                            <div class="text">Donation</div>
-                            <div class="price">$500</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 donor-block">
-                    <div class="inner-box wow fadeInUp" data-wow-delay="200ms">
-                        <div class="top-content">
-                            <div class="image">
-                                <img src="images/resource/donor-4.jpg" alt="">
-                                <div class="overlay">
-                                    <div class="icon"><a href="#"><span class="fa fa-twitter"></span></a></div>
-                                </div>
-                            </div>
-                            <h4>Jack Reuban</h4>
-                            <div class="location">Liverpool</div>
-                        </div>
-                        <div class="bottom-content">
-                            <div class="text">Donation</div>
-                            <div class="price">$200</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 donor-block">
-                    <div class="inner-box wow fadeInUp" data-wow-delay="200ms">
-                        <div class="top-content">
-                            <div class="image">
-                                <img src="images/resource/donor-3.jpg" alt="">
-                                <div class="overlay">
-                                    <div class="icon"><a href="#"><span class="fa fa-twitter"></span></a></div>
-                                </div>
-                            </div>
-                            <h4>William Noah</h4>
-                            <div class="location">Newcastle</div>
-                        </div>
-                        <div class="bottom-content">
-                            <div class="text">Donation</div>
-                            <div class="price">$500</div>
                         </div>
                     </div>
                 </div>
@@ -261,6 +189,7 @@
 
 
 <!-- JS -->
+ <script src="custom_js/app.js"></script>
 <script src="custom_js/header_footer.js"></script>
 <script src="custom_js/campaign.js"></script>
 <script src="js/jquery.js"></script>
