--- a/footer.html
+++ b/footer.html
@@ -3,51 +3,60 @@
         <div class="widget-wrapper">
             <div class="row">
                 <!-- Contact Widget -->
-                <div class="col-lg-3 col-md-6 contact-widget footer-widget">
+                <div class="col-lg-4 col-md-6 contact-widget footer-widget">
+                    <img src="images/logo.png" alt="Heart for Humen">
+
+                    <ul>
+                        <li>
+                            <br>
+                            Beguiled and demoralized by the charms of pleasure of the moment, so by desire, that they
+                            cannot foresee the pain and trouble that are bound to ensue to those who fail in their
+                            shrinking.
+
+                        </li>
+
+                    </ul>
+
+                </div>
+
+                <div class="col-lg-4 col-md-6 contact-widget footer-widget">
                     <h4 class="widget-title">Contact</h4>
                     <ul>
-                        <li>5404 Berrick Street, <br> 2nd cross, <br>Boston, MA 02115.</li>
-                        <li><a href="mailto:support@goodsoul.com">supportyou@goodsoul.com </a></li>
-                    </ul>   
-                    <h3><a href="tel:+211456789">+211 456 789</a></h3>                 
+                        <li>House No : 05, Road No: 06, Avenue: 05, <br>Mirpur-11, Dhaka-1216</li>
+                        <li><a href="sohelsikder.cse@gmail.com">sohelsikder.cse@gmail.com</a></li>
+                    </ul>
+                    <h3><a href="tel:+211456789">+88 01923 426 548</a></h3>
                 </div>
                 <!-- About Widget -->
-                <div class="col-lg-3 col-md-6 about-widget footer-widget">
+                <div class="col-lg-4 col-md-6 about-widget footer-widget">
                     <h4 class="widget-title">About</h4>
                     <ul>
-                        <li><a href="#">Charity</a></li>
-                        <li><a href="#">Volunteers</a></li>
-                        <li><a href="#">Upcoming Events</a></li>
-                        <li><a href="#">Trending News</a></li>
-                        <li><a href="#">Causes</a></li>
-                    </ul>                
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="causes.html">Causes</a></li>
+                        <li><a href="events.html">Events</a></li>
+                        <li><a href="blog.html">Blog</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                    </ul>
                 </div>
                 <!-- Link Widget -->
-                <div class="col-lg-3 col-md-6 link-widget footer-widget">
-                    <h4 class="widget-title">Quick Link</h4>
-                    <ul>
-                        <li><a href="#">Private Policies</a></li>
-                        <li><a href="#">Donate Now</a></li>
-                        <li><a href="#">Become a Volunteer</a></li>
-                        <li><a href="#">Careers</a></li>
-                        <li><a href="#">Contact Us</a></li>
-                    </ul>               
-                </div>
+
                 <!-- Newsletter Widget -->
-                <div class="col-lg-3 col-md-6 newsletter-widget footer-widget">
+                <!-- <div class="col-lg-3 col-md-6 newsletter-widget footer-widget">
                     <h4 class="widget-title">Newsletter</h4>
                     <div class="text">Subscribe us and get latest news & <br>upcoming events.</div>
                     <form action="#">
                         <input type="email" placeholder="Emial Address...">
                         <button class="submin-btn"><span class="flaticon-next"></span>Subscribe Us</button>
                     </form>
-                </div>
+                </div> -->
             </div>
-        </div>                
+        </div>
         <div class="footer-bottom">
             <div class="left-content">
                 <div class="icon"><img src="images/resource/logo-icon.png" alt=""></div>
-                <div class="copyright-text"><a href="#"></a><a href="#">Heart for Humen.</a> <br>Designed By <a href="#">Sohel.</a></div>
+                <div class="copyright-text"><a href="#"></a><a href="#">Heart for Humen.</a> <br>Designed By <a
+                        href="#">Sohel.</a></div>
             </div>
             <div class="right-content">
                 <ul class="social-icon-three">
@@ -61,4 +70,4 @@
     </div>
 </footer>
 
-  <!--Scroll to top-->
+<!--Scroll to top-->
