--- a/admin/add_couses_category.html
+++ b/admin/add_couses_category.html
@@ -80,7 +80,6 @@
                         </li>
                         <li class="nav-item">
                             <a href="total_donation.html" class="nav-link">
-
                                 <p>
                                     Donetion History
                                 </p>
@@ -211,54 +210,21 @@
 
                                         <form class="form-horizontal">
                                             <div class="form-group row">
-                                                <label for="inputName" class="col-sm-3 col-form-label">Campain
-                                                    title</label>
+                                                <label for="inputName" class="col-sm-3 col-form-label">
+                                                    Category Name</label>
                                                 <div class="col-sm-9">
-                                                    <input type="email" class="form-control" id="inputName"
+                                                    <input type="text" class="form-control" id="inputName"
                                                         placeholder="">
                                                 </div>
                                             </div>
-                                            <div class="form-group row">
 
-                                                <label for="" class="col-sm-3 col-form-label">Campain Category</label>
-                                                <div class="col-sm-9">
-                                                    <select class="form-control" id="select_category">
-                                                        <option value="">Option one</option>
-
-                                                    </select>
-                                                </div>
-                                            </div>
                                             <div class="form-group row">
                                                 <label for="" class="col-sm-3 col-form-label">Image</label>
                                                 <div class="col-sm-9">
                                                     <input type="file" class="form-control" id="" placeholder="Image">
                                                 </div>
                                             </div>
-                                            <div class="form-group row">
-                                                <label for="" class="col-sm-3 col-form-label">Short details</label>
-                                                <div class="col-sm-9">
-                                                    <input type="text" class="form-control" id="" placeholder="">
-                                                </div>
-                                            </div>
-                                            <div class="form-group row">
-                                                <label for="inputExperience"
-                                                    class="col-sm-3 col-form-label">Details</label>
-                                                <div class="col-sm-9">
-                                                    <textarea class="form-control" id="" placeholder=""></textarea>
-                                                </div>
-                                            </div>
-                                            <div class="form-group row">
-                                                <label for="" class="col-sm-3 col-form-label">Goal price</label>
-                                                <div class="col-sm-9">
-                                                    <input type="number" class="form-control" id="" placeholder="">
-                                                </div>
-                                            </div>
-                                            <div class="form-group row">
-                                                <label for="" class="col-sm-3 col-form-label">Campain day</label>
-                                                <div class="col-sm-9">
-                                                    <input type="number" class="form-control" id="" placeholder="">
-                                                </div>
-                                            </div>
+
 
                                             <div class="form-group row">
                                                 <div class="offset-sm-3 col-sm-9">
